--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,16 @@ body {
   background: #fef2f0;
 }
 
+.disabledButton:disabled{
+    cursor: not-allowed;
+    background-color: #d39e97;
+  }
+
+.disabledButton:disabled:hover {
+    background-color:#cb8e85;
+  }
+
+
 /* burger  */
 .hamburger {
   cursor: pointer;
